# WizFi360-EVB-Pico-C

./: .gitmodules  CMakeLists.txt  README.md  getting_started.md  wizfi360_evb_pico_c-patch.cmake  wizfi360_evb_pico_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/SSL_Client_Demo/: CMakeLists.txt  README.md  app_main.c  iot_demo.c  ssl_client_demo.c
examples/TCP_Client_Demo/: CMakeLists.txt  README.md  app_main.c  iot_demo.c  tcp_client_demo.c
examples/TCP_Server_Demo/: CMakeLists.txt  README.md  app_main.c  iot_demo.c  socket_startup.c  tcp_server_demo.c
libraries/: CMakeLists.txt
patches/: 01_CMSIS-FreeRTOS_cmsis_os2.patch  01_cmsis_freertos_cmsis_os2.patch
port/: CMakeLists.txt  port_common.h
port/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/RTE/inc/: RTE_Components.h
port/WizFi360/inc/: RP2040_Device.h  UART_RP2040.h  WiFi_WizFi360_Config.h
port/WizFi360/src/: UART_RP2040.c
